kustomize/overlay/qa/skyu-automation-qa-network-poilicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-and-limited-ingress
  namespace: skyu-automation-qa
  labels:
    organizationId: org_6de1b366-9da6-4d55-b363-f5a2c4382016
    projectId: project_d2301adc-5288-4026-aaad-fcb3e1d34293
    environmentId: env_5416bc69-ed2e-46e7-9a62-8f34e65bdcf4
spec:
  podSelector: {}
  egress:
    - {}
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              environmentId: env_5416bc69-ed2e-46e7-9a62-8f34e65bdcf4
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: skyu-system
    - from:
        - namespaceSelector:
            matchLabels:
              role: ingress
    - from:
        - namespaceSelector:
            matchLabels:
              role: observability
